feat(master): add config and header, variables , stylesheets

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,3 +1,8 @@
 <section class="header">
-  
+  <nav class="header__navigation">
+    <div class="header__navigation__element">HTML</div>
+    <div class="header__navigation__element">CSS/SCSS</div>
+    <div class="header__navigation__element">Typescript</div>
+    <div class="header__navigation__element">Angular</div>
+  </nav>
 </section>
