--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,5 +1,32 @@
+@import "src/app/styles/index";
+
 .header {
-  height: 48px;
+  height: $header-height;
   width: 100%;
-  background-color: red;
+
+  &__navigation {
+    margin: 0 auto;
+    width: fit-content;
+    height: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    &__element {
+      display: flex;
+      align-items: center;
+      padding: 0 24px;
+      height: 100%;
+      width: fit-content;
+      font-weight: bold;
+
+      &:after {
+        content: '';
+        width: 100%;
+        height: 2px;
+        color: red;
+        background-color: blue;
+      }
+    }
+  }
 }
