--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,5 @@
+@import "src/app/styles/colors";
+
 html {
   box-sizing: border-box;
 }
@@ -8,4 +10,7 @@ html {
 body {
   margin: 0;
   padding: 0;
+  font-family: "Open Sans", serif;
+  color: $neutral-00;
+  background: linear-gradient(60deg, rgba(1,15,15,1) 0%, rgba(0,0,0,1) 100%);
 }
