--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -13,6 +13,8 @@
     align-items: center;
 
     &__element {
+      position: relative;
+      cursor: pointer;
       display: flex;
       align-items: center;
       padding: 0 24px;
@@ -22,10 +24,21 @@
 
       &:after {
         content: '';
-        width: 100%;
         height: 2px;
-        color: red;
-        background-color: blue;
+        width: 0;
+        background: red;
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        transition: width 0.3s ease-in-out;
+        margin: auto;
+      }
+
+      &:hover {
+        &:after {
+          width: 100%;
+        }
       }
     }
   }
