feat(master): structure routing

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,6 @@
 <skl-header></skl-header>
 
-<section class="contentPage">
-  <skl-splash-stage></skl-splash-stage>
-</section>
-
-
+<div class="page">
+  <router-outlet></router-outlet>
+</div>
 
