--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,8 +1,9 @@
 <section class="header">
   <nav class="header__navigation">
-    <div class="header__navigation__element">HTML</div>
-    <div class="header__navigation__element">CSS/SCSS</div>
-    <div class="header__navigation__element">Typescript</div>
-    <div class="header__navigation__element">Angular</div>
+    <div class="header__navigation__element" routerLink="/home">Home</div>
+    <div class="header__navigation__element" routerLink="/html">HTML</div>
+    <div class="header__navigation__element" routerLink="/css">CSS/SCSS</div>
+    <div class="header__navigation__element" routerLink="/javascript">Javascript</div>
+    <div class="header__navigation__element" routerLink="/typescript">Typescript</div>
   </nav>
 </section>
