--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,5 +1,22 @@
-.contentPage {
+@import "styles/index";
+
+.page {
+  width: 100%;
+  height: calc(100vh - #{$header-height});
   margin: 0 auto;
   max-width: 1200px;
-  padding: 0 64px;
+  padding: 16px;
+
+  @include media-breakpoint-up($xs) {
+    padding: 24px;
+  }
+  @include media-breakpoint-up($sm) {
+    padding: 32px;
+  }
+  @include media-breakpoint-up($md) {
+    padding: 48px;
+  }
+  @include media-breakpoint-up($lg) {
+    padding: 64px;
+  }
 }
