--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -3,6 +3,7 @@
 .header {
   height: $header-height;
   width: 100%;
+  background-color: transparent;
 
   &__navigation {
     margin: 0 auto;
@@ -13,6 +14,7 @@
     align-items: center;
 
     &__element {
+      color: $neutral-40;
       position: relative;
       cursor: pointer;
       display: flex;
@@ -21,12 +23,14 @@
       height: 100%;
       width: fit-content;
       font-weight: bold;
+      transition: color 0.3s ease-in-out;
 
       &:after {
         content: '';
         height: 2px;
         width: 0;
-        background: red;
+        background: $neutral-00;
+        border-radius: 50%;
         position: absolute;
         bottom: 0;
         left: 0;
@@ -36,6 +40,8 @@
       }
 
       &:hover {
+        color: $neutral-00;
+
         &:after {
           width: 100%;
         }
