--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,16 +1,18 @@
-@import "src/app/styles/colors";
+@import "src/app/styles/index";
 
 html {
   box-sizing: border-box;
 }
 *, *:before, *:after {
   box-sizing: inherit;
+  overflow: hidden;
 }
 
 body {
   margin: 0;
   padding: 0;
   font-family: "Open Sans", serif;
-  color: $neutral-00;
-  background: linear-gradient(60deg, rgba(1,15,15,1) 0%, rgba(0,0,0,1) 100%);
+  color: $neutral-90;
+  overflow-x: hidden;
 }
+
